Overflow Fix

--- a/src/admin/component/pages/AdminNavBar.module.css
+++ b/src/admin/component/pages/AdminNavBar.module.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .verticalnavbar {
@@ -16,10 +16,10 @@ body {
   /* Fill the entire height of the page */
   background-color: #333;
   color: #fff;
-  padding: 10px;
+  /* padding: 10px; */
   position: fixed;
   /* Fix the navbar's position */
-  overflow-y: auto;
+  /* overflow-y: auto; */
   /* Add a scrollbar if the content overflows the navbar */
 
   /* Adjust the font size */
@@ -29,8 +29,11 @@ body {
 
 .navbarlist {
   list-style-type: none;
-  padding: 0;
-  margin: 10px;
+  padding: 20px;
+  /* margin: 10px; */
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .list {
@@ -87,7 +90,7 @@ body {
   color: #fff;
   transition: color 0.3s;
   text-decoration: none;
-  margin-top: 400px;
+
 }
 
 .logout:hover {
